--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 　<title>なんとなくのタイトル</title>
-　　<style>
-　　　body{
-　　　color:gray;
-　　　}
-　　</style>
+  <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
+　<style>
+　</style>
 </head>
 <body></body>
 </html>
