--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-　<title>なんとなくのタイトル</title>
+  <title>なんとなくのタイトル</title>
   <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
-　<style>
-　</style>
+  <style>
+  </style>
 </head>
+<header>
+</header>
 <body>
-	<h1>こんにちは！</h1>
+  <section class="virusAlert">
+    <h1>警告！</h1>
+    <p><span id="virusTimeLeft"></span> seconds until your device is infected with a virus!<br>
+    Press the button below to remove the virus!<br>
+    <button class="removeVirusButton" type="button" onclick="openByClickVirusButton()">Remove virus from Your device</button>
+    </p>
+  </section>
 </body>
 <footer>
-	
+  &copy; All Rights Reserved.
 </footer>
+<script src="script.js"></script>
 </html>
